# Digest-bot

./: .env.example  .gitignore  Dockerfile.bot  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
lib/bot/: keyboards.py  main.py
lib/bot/handlers/: __init__.py  channel.py  digest.py  help_cmd.py  settings.py  start.py
lib/core/: config.py  constants.py
lib/db/: database.py  models.py  repositories.py
lib/scripts/: auth_pyrogram.py  migrate.py
lib/worker/: ai_client.py  celery_app.py  scraper.py  tasks.py
migrations/: 001_initial.sql
scripts/: entrypoint.sh
